# tree-sitter-razen

./: .gitignore  Cargo.toml  LICENSE  README.md  SETUP.md  binding.gyp  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  tree-sitter.json
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
examples/: example.rzn
queries/: highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
